
Emulator:
- SDL GUI:
  - Update clock speed in the status bar when changing bus speed
    in Falcon mode
  - In the floppy dialog, use a checkbox to enable/disable drives A and B
  - In the screen dialog, add checkbox for --desktop-st option
- Fix: Xbios(255) modified the given argument string
- New options --drive-a and --drive-b to enable/disable drives A and B
- New NatFeats commands : NF_DEBUGGER invokes Hatari debugger
  from native program and NF_FASTFORWARD toggles fast forward on/off
- Allow GEMDOS, VDI and AES tracing to be enabled without enabling
  also GEMDOS HD emulation or extended VDI mode
- Debugger:
  - Fix: GCC and VBCC use different offsets for DATA & BSS symbols,
    handle that in program binary symbol table parsing
  - Fix: release mouse in all cases where debugger can be invoked
  - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly
  - Fix: "symbols" command crash when it was used during TOS bootup
  - Fix: TOS and cartridge addresses weren't (with all TOS versions)
    in address order which asserted in profile data post-processor
  - Fix: "next" command didn't work correctly in "hex" number base
  - removed limits on breakpoints and their conditions
  - new --debug-except option to specify which exceptions invoke
    the debugger, and WinUAE CPU core support for -D toggle option
  - "next"/"dspnext" commands work like in other debuggers, they
    skip subroutine/exception calls, for all other instructions
    they works like "step" command (earlier they always moved to
    next instruction in memory)
  - "next" and "dspnext" commands support optional "instruction type"
    argument, which can be used (for example) to continue emulation
    until subroutine returns
  - "history" command takes optional parameter specifying how many
    instructions of history will be tracked
  - CPU & DSP profile commands have now subcommand for profiling loops
  - "CpuInstr" and "DspInstr" variables for count of instructions