@@ -82,6 +82,9 @@ Grab mouse (also) in windowed mode
 .B \-\-frameskips <x>
 Skip <x> frames after each displayed frame to accelerate emulation
 (0=disabled, >4 uses automatic frameskip with given value as maximum)
+.TP
+.B \-\-slowdown <x>
+Slow down emulation by factor of x (used as multiplier for VBL wait time)
 .TP 
 .B \-\-statusbar <bool>
 Show statusbar (with floppy leds etc etc)
