@@ -442,6 +442,9 @@ mode</p>
 <p class="paramdesc">Skip &lt;x&gt; frames after each
 displayed frame to accelerate emulation (0=disabled, &gt;4 uses
 automatic frameskip with given value as maximum)</p>
+<p class="parameter">--slowdown &lt;x&gt;</p>
+<p class="paramdesc">Slow down emulation by factor of x
+(used as multiplier for VBL wait time)</p>
 <p class="parameter">--statusbar
 &lt;bool&gt;</p>
 <p class="paramdesc">Show statusbar (with floppy leds etc
